--- a/d03/materials/art-is-hard/art-is-hard.css
+++ b/d03/materials/art-is-hard/art-is-hard.css
@@ -1,5 +1,6 @@
 body {
   font-family: arial;
+  text-align: center;
 }
 
 h1, h2 {
@@ -25,5 +26,6 @@ h1 {
 }
 
 .uglyart {
+  box-shadow: 1px 4px 10px black;
   border-radius: 10px;
 }
