--- a/d12/materials/responsive-nav/css/style.css
+++ b/d12/materials/responsive-nav/css/style.css
@@ -1,22 +1,53 @@
-h1 {
-  display: inline-block;
-  margin: 0px 0px;  
+.header {
+  background-color: black;
+  position: relative;
+  margin: 0px 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
-nav {
-  background-color: black;
-  text-align: right;
-  padding-top: 10px;
-  padding-bottom: 10px;
+h3 {
+  color: white;
+  display: inline-block;
+  margin: 0px 0px;
+  padding: 0px 0px;
 }
 
 a {
-  padding: 10px 10px;
-  margin: 0px;
   text-decoration: none;
+  float: right;
   color: white;
+  margin-left: 10px;
 }
 
 a:hover {
   background-color: orange;
+}
+
+#menu {
+  position: absolute;
+  right: 35px;
+  top: 50%;
+}
+
+.menu-lin {
+  display: block;
+  width: 20px;
+  height: 2px;
+  margin-bottom: 2px;
+  background-color: red;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  #menu {
+    display: none;
+  }
 }
